--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="shortcut icon" type="image/x-icon" href="https://unpkg.byted-static.com/latest/byted/arco-config/assets/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="src/assets/images/logo_1.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Model Valhalla 决出能力最强的大模型</title>
   </head>
